# timbre_new

./: .env.example  .gitignore  CLAUDE.md  POSTPARTUM_FLOW_PRD.md  README.md  requirements.txt
dashboard/: DESIGN.md  README.md  package-lock.json  package.json
dashboard/cekura/: PERSONAS_PRD.md  README.md
dashboard/supabase/: CREATE_TABLES_PRD.md  schema.sql  seed.sql
deploy/: .dockerignore  Dockerfile  README.md  bot.py  dialout_test.py  pcc-deploy.toml  pyproject.toml
deploy/src/: dashboard_client.py  prompts.py
deploy/src/flows/: __init__.py  postpartum.py
docs/: README.md  architecture.md  roadmap.md  setup.md
docs/img/: architecture.mmd  clinical-flow.mmd  improvement-loop.mmd  voice-pipeline.mmd  write-path.mmd
docs/milestones/: m0-local-mic.md  m1-twilio-phone.md
docs/tooling/: CONTRACT.md  README.md  glm_factory_prompt.md  hot_reload_findings.md  zai_findings.md
launchd/: com.timbre.morningcall.plist  com.timbre.tunnel.plist
prompts/: prompts.json
scripts/: bench_llm_latency.py  grant_permissions.py  memory_cli.py  morning_call.sh  serve_persistent.py  serve_persistent.sh  sim_twilio_ws.py  test_agent_memory.py  test_cekura_observability.py
src/: call_me.py  cekura_observability.py  dashboard_client.py  m0_local_bot.py  mac_actions.py  postpartum_bot.py  run_morning_call.py  turn_helpers.py  twilio_bot.py
src/agent_memory/: __init__.py  recorder.py  retrieval.py  store.py  summarizer.py
src/flows/: postpartum.py
src/mac_tools/: __init__.py  confirm.py  factory.py  policy.py  registry.py  runner.py  validator.py
(+67 files in other folders)
